--- a/SpookyToot/SpookyToot/MainWindow.xaml
+++ b/SpookyToot/SpookyToot/MainWindow.xaml
@@ -11,13 +11,32 @@
         <local:GraphControl/>
     </Window.DataContext>
     <Grid>
-        <Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="90*"/>
+            <ColumnDefinition Width="10*"/>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
             <RowDefinition Height=" 50*"/>
             <RowDefinition Height="50*"/>
         </Grid.RowDefinitions>
-        <oxy:PlotView x:Name="DailyView" Model="{Binding ModelViewDaily.Model}" Controller="{Binding ModelViewDaily.Controller }" Grid.Row="0" />
-        <oxy:PlotView x:Name="WeeklyMonthlyView" Model="{Binding ModelViewWeekly.Model}" Controller="{Binding ModelViewWeekly.Controller }" Grid.Row="1" KeyDown="WeeklyView_KeyDown"/>
 
+            <oxy:PlotView x:Name="DailyView" Model="{Binding ModelViewDaily.Model}" Controller="{Binding ModelViewDaily.Controller }" Grid.Row="0" />
+        <oxy:PlotView x:Name="WeeklyMonthlyView" Model="{Binding ModelViewWeekly.Model}" Controller="{Binding ModelViewWeekly.Controller }" Grid.Row="1" KeyDown="WeeklyView_KeyDown"/>
+            </Grid>
+             <StackPanel Grid.Column="1">
+            <CheckBox Name="FOP" IsChecked="False" HorizontalAlignment="Center" VerticalContentAlignment="Center"   FontSize="22" Margin="0 20">
+                <AccessText TextAlignment="Center" Text="First Order Pivots" TextWrapping="Wrap"></AccessText>
+            </CheckBox>
+            <CheckBox Name="SOP" IsChecked="{Binding ElementName = SOPChecked, Path=SOPChecked}" HorizontalAlignment="Center" VerticalContentAlignment="Center"  FontSize="22" Margin="0 20">
+                <AccessText TextAlignment="Center" Text ="Second Order Pivots" TextWrapping="Wrap"></AccessText>
+            </CheckBox>
+            <CheckBox Name="TOP" IsChecked="False" HorizontalAlignment="Center" VerticalContentAlignment="Center"  FontSize="22" Margin=" 0 20">
+                <AccessText TextAlignment="Center" Text="Third Order Pivots" TextWrapping="Wrap"/>
+            </CheckBox>
+        </StackPanel>
+        
+        
     </Grid>
     
 </Window>
