--- a/SpookyToot/SpookyToot/MainWindow.xaml
+++ b/SpookyToot/SpookyToot/MainWindow.xaml
@@ -12,19 +12,32 @@
     </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="90*"/>
-            <ColumnDefinition Width="10*"/>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="50*"/>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0">
-            <Grid.RowDefinitions>
-            <RowDefinition Height=" 50*"/>
-            <RowDefinition Height="50*"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height=" 90*"/>
+            <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
 
-            <oxy:PlotView x:Name="DailyView" Model="{Binding ModelViewDaily.Model}" Controller="{Binding ModelViewDaily.Controller }" Grid.Row="0" />
-        <oxy:PlotView x:Name="WeeklyMonthlyView" Model="{Binding ModelViewWeekly.Model}" Controller="{Binding ModelViewWeekly.Controller }" Grid.Row="1" KeyDown="WeeklyView_KeyDown"/>
-            </Grid>
-             <StackPanel Grid.Column="1">
+            <oxy:PlotView x:Name="DailyView" Model="{Binding ModelViewDaily.Model}" Controller="{Binding ModelViewDaily.Controller }" Grid.Row="0" Grid.Column="0" />
+        <oxy:PlotView x:Name="WeeklyMonthlyView" Model="{Binding ModelViewWeekly.Model}" Controller="{Binding ModelViewWeekly.Controller }" Grid.Row="0" Grid.Column="1" KeyDown="WeeklyView_KeyDown"/>
+
+        <ItemsControl x:Name="PivotList" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2"  ItemsSource="{Binding CurrentOverlays}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel x:Name="Stacky" Orientation="Horizontal"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <CheckBox Content="{Binding Name}"  IsChecked="{Binding Show}" ></CheckBox>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+
+
+        <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2">
             <CheckBox Name="FOP" IsChecked="False" HorizontalAlignment="Center" VerticalContentAlignment="Center"   FontSize="22" Margin="0 20">
                 <AccessText TextAlignment="Center" Text="First Order Pivots" TextWrapping="Wrap"></AccessText>
             </CheckBox>
