--- a/SpookyToot/SpookyToot/MainWindow.xaml
+++ b/SpookyToot/SpookyToot/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SpookyToot"
         mc:Ignorable="d"
+        KeyDown="DailyView_OnKeyDown" 
         Title="MainWindow" Height="750" Width="1300">
     <Window.DataContext>
         <local:GraphControl/>
@@ -20,13 +21,13 @@
             <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
 
-            <oxy:PlotView x:Name="DailyView" Background="AliceBlue" Model="{Binding ModelViewDaily.Model}" Controller="{Binding ModelViewDaily.Controller }" Grid.Row="0" Grid.Column="0" KeyDown="DailyView_OnKeyDown" />
-        <oxy:PlotView x:Name="WeeklyMonthlyView" Background="AliceBlue"  Model="{Binding ModelViewWeekly.Model}" Controller="{Binding ModelViewWeekly.Controller }" Grid.Row="0" Grid.Column="1" KeyDown="WeeklyView_KeyDown"/>
+            <oxy:PlotView x:Name="DailyView" Background="AliceBlue" Model="{Binding ModelViewDaily.Model}" Controller="{Binding ModelViewDaily.Controller }" Grid.Row="0" Grid.Column="0" />
+        <oxy:PlotView x:Name="WeeklyMonthlyView" Background="AliceBlue"  Model="{Binding ModelViewWeekly.Model}" Controller="{Binding ModelViewWeekly.Controller }" Grid.Row="0" Grid.Column="1"/>
 
         <ItemsControl x:Name="PivotList" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2"  ItemsSource="{Binding CurrentOverlays}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <StackPanel x:Name="Stacky" Orientation="Horizontal"/>
+                    <StackPanel x:Name="Stacky" Orientation="Horizontal" CanHorizontallyScroll="True"/>
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
