--- a/SpookyToot/SpookyToot/MainWindow.xaml
+++ b/SpookyToot/SpookyToot/MainWindow.xaml
@@ -25,22 +25,41 @@
 
                 <oxy:PlotView x:Name="DailyView" Background="AliceBlue" Model="{Binding ModelViewDaily.Model}" Controller="{Binding ModelViewDaily.Controller }" Grid.Row="0" Grid.Column="0" />
                 <oxy:PlotView x:Name="WeeklyMonthlyView" Background="AliceBlue"  Model="{Binding ModelViewWeekly.Model}" Controller="{Binding ModelViewWeekly.Controller }" Grid.Row="0" Grid.Column="1"/>
-
-                <ItemsControl x:Name="PivotList" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2"  ItemsSource="{Binding CurrentOverlays}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <StackPanel x:Name="Stacky" Orientation="Horizontal" CanHorizontallyScroll="True"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <CheckBox Content="{Binding Name}"  IsChecked="{Binding Show}" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" ></CheckBox>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-
-            </Grid>
+                <Grid  Grid.Row="1" ColumnSpan="2" Grid.Column="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="50*"></ColumnDefinition>
+                        <ColumnDefinition Width="50*"></ColumnDefinition>
+                        <ColumnDefinition Width="50*"></ColumnDefinition>
+                        <ColumnDefinition Width="50*"></ColumnDefinition>
+                        <ColumnDefinition Width="50*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel x:Name="StackyPivots" Grid.Column="0" Orientation="Vertical" >
+                        <CheckBox Content="First Order Pivots" Margin="3 3"   Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" ></CheckBox>
+                        <CheckBox Content="Second Order Pivots" Margin="3 3"  Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" ></CheckBox>
+                        <CheckBox Content="Third Order Pivots" Margin="3 3"  Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" ></CheckBox>
+                    </StackPanel>
+                    <StackPanel x:Name="StackyResistance" Grid.Column="1" Orientation="Vertical" >
+                        <CheckBox Content="Hourly Resistance" Margin="1 1"   Checked=""  Unchecked="CheckBox_Unchecked" ></CheckBox>
+                        <CheckBox Content="Daily Resistance" Margin="1 1"  Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" ></CheckBox>
+                        <CheckBox Content="Weekly Resistance" Margin="1 1"  Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" ></CheckBox>
+                        <CheckBox Content="Monthly Resistance" Margin="1 1"  Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" ></CheckBox>
+                    </StackPanel>
+                </Grid>
+                </Grid>
         </TabItem>
+
+        <!--<ItemsControl x:Name="PivotList" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2"  ItemsSource="{Binding CurrentOverlays}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel x:Name="Stacky" Orientation="Horizontal" CanHorizontallyScroll="True"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <CheckBox Content="{Binding Name}"  IsChecked="{Binding Show}" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" ></CheckBox>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>-->
 
         <TabItem Name="Market" Header="Market">
             <TabItem.DataContext>
@@ -49,4 +68,4 @@
             <Button Name="LoadMarket" Content="Load Market"></Button>
         </TabItem>
     </TabControl>
-    </Window>
+</Window>
